@@ -41,6 +41,7 @@ from hahomematic.const import (
     HH_EVENT_NEW_DEVICES,
     IF_BIDCOS_RF_NAME,
     IF_PRIMARY,
+    INIT_DATETIME,
     MANUFACTURER,
     NO_CACHE_ENTRY,
     PROXY_INIT_SUCCESS,
@@ -63,6 +64,7 @@ from hahomematic.helpers import (
     check_or_create_directory,
     get_device_address,
     get_device_channel,
+    updated_within_seconds,
 )
 from hahomematic.hub import HmHub
 from hahomematic.json_rpc_client import JsonRpcAioHttpClient
@@ -1139,6 +1141,7 @@ class DeviceDataCache:
         # { interface, {channel_address, {parameter, CacheEntry}}}
         self._central_values_cache: dict[str, dict[str, dict[str, Any]]] = {}
         self._central: Final = central
+        self._last_updated = INIT_DATETIME
 
     @property
     def is_empty(self) -> bool:
@@ -1164,16 +1167,25 @@ class DeviceDataCache:
     ) -> None:
         """Add device data to cache."""
         self._central_values_cache = device_data
+        self._last_updated = datetime.now()
 
     def get_device_data(
-        self, interface: str, channel_address: str, parameter: str
+        self,
+        interface: str,
+        channel_address: str,
+        parameter: str,
+        max_age_seconds: int = 60,
     ) -> Any:
         """Get device data from cache."""
-        return (
-            self._central_values_cache.get(interface, {})
-            .get(channel_address, {})
-            .get(parameter, NO_CACHE_ENTRY)
-        )
+        if updated_within_seconds(
+            last_update=self._last_updated, max_age_seconds=max_age_seconds
+        ):
+            return (
+                self._central_values_cache.get(interface, {})
+                .get(channel_address, {})
+                .get(parameter, NO_CACHE_ENTRY)
+            )
+        return NO_CACHE_ENTRY
 
     async def clear(self) -> None:
         """Clear the cache."""
