@@ -1,5 +1,6 @@
 Version 2022.7.13 (2022-07-22)
 - Cleanup API
+- Limit init cache time usage
 
 Version 2022.7.12 (2022-07-21)
 - Add ELV-SH-BS2 to custom entities
